# khazad-dum

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
include/: khazad_dum.h
include/crypto/ec/: ec_key_converter.h
include/crypto/symmetric/: aes_processor.h
include/tpm2/: crypt_key.h  key_defs.h  primary_object.h  tpm2_hal.h
include/utils/: aes_exception.h  macros.h  tpm2_exception.h  type_defs.h
src/: khazad_dum.cpp  main.cpp
src/crypto/ec/: ec_key_converter.cpp
src/crypto/symmetric/: aes_processor.cpp
src/tpm2/: crypt_key.cpp  primary_object.cpp  tpm2_hal.cpp
